[gd_scene load_steps=17 format=3 uid="uid://3mdcurpgqty6"]

[ext_resource type="Script" uid="uid://csfi1835m7mcx" path="res://scenes/ui/talents_ui.gd" id="1_j156s"]
[ext_resource type="Shader" uid="uid://ba5nk0x4ggpv2" path="res://scenes/shader/blur.gdshader" id="2_o8rne"]
[ext_resource type="Texture2D" uid="uid://bxa6wvr3o6nkv" path="res://texture/ui/Pxiel-Art-UI-borders_03.png" id="3_t0nko"]
[ext_resource type="Script" uid="uid://dlhx7lanxsjbj" path="res://scenes/ui/talent_tree.gd" id="4_q0t0d"]
[ext_resource type="PackedScene" uid="uid://cnxlh132qehjk" path="res://scenes/ui/components/talent_panel.tscn" id="5_4yach"]
[ext_resource type="Texture2D" uid="uid://bdrgkaykv3fgg" path="res://texture/ui/divider-fade-005.png" id="6_rl1oh"]
[ext_resource type="Texture2D" uid="uid://c23igv6ads26v" path="res://texture/ui/divider-002.png" id="7_2xh01"]
[ext_resource type="Script" uid="uid://cwtw83vjnmvwi" path="res://scenes/ui/components/talent_info.gd" id="8_gtwqw"]
[ext_resource type="Texture2D" uid="uid://2ghvtccf0k4d" path="res://texture/skill/76-Shove-Stab.png" id="9_bt3a1"]
[ext_resource type="Texture2D" uid="uid://dyl5n5580587p" path="res://texture/ui/divider-fade-002.png" id="10_js3a6"]
[ext_resource type="Texture2D" uid="uid://b6xtumijqc2cb" path="res://texture/ui/Pxiel-Art-UI-borders_09.png" id="11_ucyfw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6kxkr"]
shader = ExtResource("2_o8rne")
shader_parameter/lod = 5.0
shader_parameter/mix_percentage = 0.3

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sp6dv"]
texture = ExtResource("3_t0nko")
texture_margin_left = 19.0
texture_margin_top = 19.0
texture_margin_right = 19.0
texture_margin_bottom = 19.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m8bqo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ooctd"]
texture = ExtResource("11_ucyfw")
texture_margin_left = 9.0
texture_margin_top = 9.0
texture_margin_right = 9.0
texture_margin_bottom = 9.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dkcqv"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
texture = ExtResource("11_ucyfw")
texture_margin_left = 9.0
texture_margin_top = 9.0
texture_margin_right = 9.0
texture_margin_bottom = 9.0

[node name="TalentsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j156s")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_6kxkr")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_sp6dv")

[node name="TalentTree" type="Container" parent="Panel"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 10.0
offset_right = -210.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(207, 143)
mouse_filter = 0
script = ExtResource("4_q0t0d")

[node name="TalentPanel" parent="Panel/TalentTree" instance=ExtResource("5_4yach")]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect2" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 375.0
offset_top = -18.0
offset_right = 439.0
offset_bottom = -10.0
grow_vertical = 0
texture = ExtResource("6_rl1oh")
expand_mode = 1
metadata/_edit_group_ = true

[node name="TalentCount" type="Label" parent="Panel/TextureRect2"]
layout_mode = 0
offset_left = 1.0
offset_top = -15.0
offset_right = 65.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 12
text = "天赋点:1"

[node name="TextureRect" type="NinePatchRect" parent="Panel"]
layout_mode = 0
offset_left = 447.0
offset_top = 6.0
offset_right = 796.0
offset_bottom = 9.0
rotation = 1.5708
texture = ExtResource("7_2xh01")
patch_margin_right = 2

[node name="TalentInfo" type="Control" parent="Panel"]
anchors_preset = 0
offset_left = 454.0
offset_top = 20.0
offset_right = 627.0
offset_bottom = 345.0
script = ExtResource("8_gtwqw")

[node name="Name" type="Label" parent="Panel/TalentInfo"]
layout_mode = 0
offset_left = 45.0
offset_top = 73.0
offset_right = 133.0
offset_bottom = 96.0
text = "天赋名称"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pre" type="Label" parent="Panel/TalentInfo"]
layout_mode = 0
offset_left = 6.0
offset_top = 265.0
offset_right = 173.0
offset_bottom = 278.0
theme_override_colors/font_color = Color(0.542467, 0.70155, 0.89004, 1)
theme_override_font_sizes/font_size = 8
text = "需要天赋：无"

[node name="Str" type="Label" parent="Panel/TalentInfo"]
layout_mode = 0
offset_left = 6.0
offset_top = 249.0
offset_right = 173.0
offset_bottom = 262.0
theme_override_colors/font_color = Color(0.875665, 0.584856, 0.38985, 1)
theme_override_font_sizes/font_size = 8
text = "需要天赋：无"

[node name="Level" type="Label" parent="Panel/TalentInfo"]
layout_mode = 0
offset_left = 45.0
offset_top = -3.0
offset_right = 133.0
offset_bottom = 20.0
text = "Lv.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/TalentInfo"]
layout_mode = 0
offset_left = 68.0
offset_top = 25.0
offset_right = 108.0
offset_bottom = 65.0
texture = ExtResource("9_bt3a1")
expand_mode = 1

[node name="Line" type="TextureRect" parent="Panel/TalentInfo"]
layout_mode = 0
offset_left = -7.0
offset_top = 103.0
offset_right = 89.0
offset_bottom = 106.0
texture = ExtResource("10_js3a6")
expand_mode = 1

[node name="Line2" type="TextureRect" parent="Panel/TalentInfo"]
layout_mode = 0
offset_left = 181.0
offset_top = 106.0
offset_right = 277.0
offset_bottom = 109.0
rotation = 3.14159
texture = ExtResource("10_js3a6")
expand_mode = 1

[node name="Info" type="RichTextLabel" parent="Panel/TalentInfo"]
layout_mode = 0
offset_left = 6.0
offset_top = 115.0
offset_right = 168.0
offset_bottom = 225.0
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "天赋介绍"

[node name="Upgrade" type="Button" parent="Panel/TalentInfo"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.5
offset_top = -33.0
offset_right = 44.5
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_m8bqo")
theme_override_styles/hover = SubResource("StyleBoxTexture_ooctd")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dkcqv")
theme_override_styles/normal = SubResource("StyleBoxTexture_ooctd")
text = "学习"

[node name="key" type="Button" parent="Panel/TalentInfo"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 31.5
offset_top = -76.0
offset_right = 90.5
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_m8bqo")
theme_override_styles/hover = SubResource("StyleBoxTexture_ooctd")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ooctd")
theme_override_styles/normal = SubResource("StyleBoxTexture_ooctd")
text = "未设置按键"

[node name="back" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -35.0
offset_right = 71.0
offset_bottom = -13.0
grow_vertical = 0
theme_override_font_sizes/font_size = 8
text = "返回"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="gui_input" from="Panel/TalentTree" to="Panel/TalentTree" method="_on_gui_input"]
[connection signal="pressed" from="Panel/TalentInfo/Upgrade" to="Panel/TalentInfo" method="_on_upgrade_pressed"]
[connection signal="pressed" from="Panel/TalentInfo/key" to="Panel/TalentInfo" method="_on_key_pressed"]
[connection signal="pressed" from="Panel/back" to="." method="_on_back_pressed"]
